# Synapse

./: .gitignore  .pre-commit-config.yaml  Dockerfile  HISTORY.md  Makefile  PROGRESS.md  README.md  demo_client.py  demo_grpc_client.py  docker-compose.yml  pyproject.toml  requirements.txt  run_grpc_services.py  run_services.py
.github/workflows/: ci.yml  docker.yml
.sisyphus/plans/: synapse-improvements.md
clients/: __init__.py  grpc_client.py  resilient_client.py  tcp_client.py
config/: __init__.py  settings.py
gateway/: __init__.py  api_gateway.py  connection_pool.py  load_balancer.py
monitoring/: prometheus.yml
proto/: ai_agent.proto
services/: __init__.py  base_service.py  claude_service.py  codex_service.py  fallback.py  gemini_service.py  grpc_base_service.py  protocol.py  streaming_checkpoint.py
services/grpc_generated/: ai_agent_pb2.py  ai_agent_pb2.pyi  ai_agent_pb2_grpc.py
services/interceptors/: __init__.py  adaptive_timeout.py  circuit_breaker.py  retry.py
tests/: conftest.py  test_adaptive_timeout.py  test_api_gateway.py  test_circuit_breaker.py  test_connection_pool.py  test_fallback.py  test_integration.py  test_load_balancer.py  test_resilient_client.py  test_retry.py  test_streaming_checkpoint.py
tui/: __init__.py  dashboard.py
